Fixed static code analysis warnings and errors, fixed failures, fixed typos, added arch unit test methods exclusion logic